Fixed minor layout issue and added whitespace to dino.js.

--- a/dino.css
+++ b/dino.css
@@ -25,6 +25,11 @@ body {
 	top: -1px;
 }
 
+.creditsImage {
+	position: relative;
+	top: -1px;
+}
+
 .unlockedLock {
 	text-align: center;
 	cursor: pointer;
